@@ -48,6 +48,7 @@ Conor MacNeill
 Craeg Strong
 Craig Cottingham
 Craig R. McClanahan
+Craig Richardson
 Craig Ryan
 Craig Sandvik
 Curtis White
