@@ -179,6 +179,14 @@
       fail if neither is reachable.  <em>Since Ant 1.8.0</em>.</td>
     <td align="center" valign="top">No, default is false</td>
   </tr>
+  <tr>
+    <td valign="top">enableStartTLS</td>
+    <td valign="top">"true", "on" or "yes" accepted here<br></br>
+      whether the STARTTLS command used to switch to an encrypted
+      connection for authentication should be supported.  Requires
+      JavaMail.  <em>Since Ant 1.8.0</em></td>
+    <td valign="center">No</td>
+  </tr>
 </table>
 
 <h3>Note regarding the attributes containing email addresses</h3>
