@@ -246,6 +246,12 @@ control for turning off success or failure messages individually.</p>
     <td width="63%">No</td>
   </tr>
   <tr>
+    <td width="337">MailLogger.starttls.enable</td>
+    <td width="63%">on or true if STARTTLS should be supported
+    (requires JavaMail).  <em>Since Ant 1.8.0</em></td>
+    <td width="63%">No, default is false</td>
+  </tr>
+  <tr>
     <td width="337">MailLogger.properties.file </td>
     <td width="63%">Filename of properties file that will override other values.</td>
     <td width="63%">No</td>
